--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,3 +29,30 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.btn.btn-success.add-publication{
+  margin-top: 2vh;
+}
+
+.author.form-control{
+  margin-top: 1vh;
+}
+
+.content.form-control{
+  margin-bottom: 1vh;
+}
+
+.container-md.publication-list{
+  display:block;
+}
+
+.card.publication{
+  max-width:30vw;
+  max-height:30vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+button{
+  margin-top: 3vh;
+}
